testdata/accumulate01.reject.out
type error: can not unify
[32m1[m
with
[32m0[m

in "testdata/accumulate01.reject.lc" (line 9, column 60):
  fragmentStream    = rasterizePrimitives rasterCtx Smooth primitiveStream
                                                           ^^^^^^^^^^^^^^^
